--- a/permissionlib/build.gradle
+++ b/permissionlib/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.mundia416'
+
 android {
     compileSdkVersion 27
 
