--- a/permissionlib/build.gradle
+++ b/permissionlib/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 
-
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
@@ -40,4 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api 'com.github.florent37:runtime-permission-kotlin:1.0.1'
+
 }
